--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=todo-list
-spring.datasource.url=jdbc:mysql://mysql:3306/todolist_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
 spring.datasource.username=todo_user
-spring.datasource.password=todo_password
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:mysql://localhost:3306/todolist
+spring.flyway.user=todo_user
+spring.flyway.password=password
+
