--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:8.1
     container_name: mysql-container
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: todolist
       MYSQL_USER: todo_user
       MYSQL_PASSWORD: password
@@ -13,6 +13,7 @@ services:
       - mysql-data:/var/lib/mysql
     networks:
       - todo-network
+    restart: always
 
   app:
     build: .
@@ -23,6 +24,13 @@ services:
       - "8080:8080"
     networks:
       - todo-network
+    entrypoint: >
+      sh -c "
+      until timeout 1 bash -c 'cat < /dev/null > /dev/tcp/mysql/3306'; do
+        echo 'Waiting for MySQL...';
+        sleep 1;
+      done;
+      java -jar app.jar"
 
 networks:
   todo-network:
