--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=todo-list
-spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.datasource.url=jdbc:mysql://mysql:3306/todolist
 spring.datasource.username=todo_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,7 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:mysql://localhost:3306/todolist
+spring.flyway.url=jdbc:mysql://mysql:3306/todolist
 spring.flyway.user=todo_user
 spring.flyway.password=password
 
+spring.profiles.active=skip-tests
