--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
+# APP
 spring.application.name=todo-list
-spring.datasource.url=jdbc:mysql://mysql:3306/todolist
 spring.datasource.username=todo_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
+# Flyway
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:mysql://mysql:3306/todolist
 spring.flyway.user=todo_user
 spring.flyway.password=password
 
+# Profiles
 spring.profiles.active=skip-tests
+
+
+# Docker container properties
+# spring.datasource.url=jdbc:mysql://mysql:3306/todolist
+# spring.flyway.url=jdbc:mysql://mysql:3306/todolist
+
+# Local development properties
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.flyway.url=jdbc:mysql://localhost:3306/todolist
