added JWT Auth functionality and all necessary changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.username=todo_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#JWT
+jwt.secret=KnOJVJbQHJg6/816vse6AYDj43vAd5IETE57bK2UBvU=
+jwt.expiration=3600
+jwt.refreshExpiration=86400
+
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
